--- a/public/estilo.css
+++ b/public/estilo.css
@@ -83,3 +83,53 @@ button[type="reset"] {
   flex: 1;
   width: auto;
 }
+
+
+
+
+.table-container {
+  max-width: 90%;
+  margin: 30px auto;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  padding: 20px;
+  overflow-x: auto;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+}
+
+th {
+  background-color: #0d47a1; /* azul del navbar */
+  color: white;
+  padding: 12px;
+  text-transform: capitalize;
+}
+
+td {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #e3f2fd;
+  transition: background 0.2s;
+}
+
+table th:first-child {
+  border-top-left-radius: 12px;
+}
+
+table th:last-child {
+  border-top-right-radius: 12px;
+}
